--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ flake8 = "^6.0.0"
 black = "^22.3.0"
 isort = "^5.9.3"
 
+[tool.black]
+line-length = 80
+
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
