--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pytest = "^7.2"
 pytest-asyncio = "^0.20.3"
 pytest-pretty = "^1.1.0"
 starlette-prometheus = "^0.9.0"
+redis = "^4.5.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.0.0"
