--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,12 @@ uvicorn = "^0.18.2"
 ujson = "^5.4.0"
 python-dotenv = "^0.1"
 pytest = "^7.2"
+pytest-cov = "^4.0.0"
 pytest-asyncio = "^0.20.3"
 pytest-pretty = "^1.1.0"
 starlette-prometheus = "^0.9.0"
 redis = "^4.5.1"
+httpx = "^0.23.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.0.0"
