--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest-pretty = "^1.1.0"
 starlette-prometheus = "^0.9.0"
 redis = "^4.5.1"
 httpx = "^0.23.3"
+celery = "^5.2.7"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.0.0"
