--- a/worker/pyproject.toml
+++ b/worker/pyproject.toml
@@ -11,6 +11,9 @@ pandas = "^1.5.3"
 celery = "^5.2.7"
 redis = "^4.5.1"
 pydantic = "^1.10.5"
+scikit-learn = "^1.2.1"
+black = "^23.1.0"
+flake8 = "^6.0.0"
 
 
 [build-system]
